# local-voice-type

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: api.rs  audio.rs  config.rs  main.rs  typing.rs
server/: Dockerfile  docker-compose.yml  main.py  requirements.txt
