[package]
name = "voice-type"
version = "0.1.0"
edition = "2021"
description = "Voice-to-text typing client"

[dependencies]
# Global keyboard hooks
rdev = "0.5"

# Audio capture
cpal = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "multipart", "json"] }

# Keyboard typing
enigo = "0.2"

# Config file
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Misc
dirs = "5.0"
hound = "3.5"  # WAV file writing
serde_json = "1.0"  # JSON parsing
